Fix layout problems

--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,7 @@ p,
 li,
 figcaption {
   text-wrap: pretty;
-  max-width: var(--maxWidthforTexts);
+  /* max-width: var(--maxWidthforTexts); */
 }
 
 /* CSS RESET ENDS HERE */
@@ -77,7 +77,8 @@ figcaption {
   --light-weight: 300;
   --sidebar-font-color: rgb(245, 245, 245);
   --note-header-font-color: rgb(255, 255, 255);
-  --note-header-bg-color: #4D4D4D;
+  --note-header-bg-color: #4d4d4d;
+  --note-body-color: rgb(255, 250, 250);
 }
 
 html {
@@ -99,37 +100,36 @@ body {
 
 /* Note element */
 .wrap-collapsible {
-  max-width: var(--maxWidthforTexts);
+  /* max-width: var(--maxWidthforTexts); */
 }
 
 .collapsible-content {
   max-height: 0px;
   overflow: hidden;
 
-  transition: max-height 0.25s ease-in-out;
+  transition: max-height 0.3s ease-in-out;
 }
 
 .wrap-collapsible input[type="checkbox"] {
   display: none;
 }
 
-.toggle:checked+.lbl-toggle+.collapsible-content {
+.toggle:checked + .lbl-toggle + .collapsible-content {
   max-height: 100vh;
 }
 
-.toggle:checked+.lbl-toggle::before {
+.toggle:checked + .lbl-toggle::before {
   transform: rotate(90deg) translateX(-3px);
 }
 
-.toggle:checked+.lbl-toggle {
+.toggle:checked + .lbl-toggle {
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
 .collapsible-content .content-inner {
-  background: rgba(250, 224, 66, 0.2);
-  border-bottom: 1px solid rgba(250, 224, 66, 0.45);
-
+  background: var(--note-body-color);
+  border-bottom: 1px solid rgb(231, 216, 216);
   border-bottom-left-radius: 7px;
   border-bottom-right-radius: 7px;
   padding: 0.5rem 1rem;
@@ -139,10 +139,8 @@ body {
   font-weight: bold;
   font-family: monospace;
   font-size: 1.2rem;
-  text-transform: uppercase;
-  text-align: center;
-
   padding: 1rem;
+  justify-content: start;
 
   color: var(--note-header-font-color);
   background: var(--note-header-bg-color);
@@ -153,11 +151,7 @@ body {
   transition: all 0.25s ease-out;
 }
 
-.lbl-toggle:hover {
-  
-}
-
-.lbl-toggle::before {
+/* .lbl-toggle::before {
   content: " ";
 
   border-top: 5px solid transparent;
@@ -168,7 +162,7 @@ body {
   margin-right: 0.7rem;
 
   transition: transform 0.2s ease-out;
-}
+} */
 
 /* Sidebar */
 
@@ -183,6 +177,7 @@ body {
   top: 0;
   position: sticky;
   width: max-content;
+
 }
 
 .menu-icon:hover {
@@ -195,12 +190,12 @@ body {
 
 .sidebar-container {
   font-weight: bold;
-  flex-basis: 20rem;
-  transition: flex-basis .5s ease;
+  flex-basis: 70rem;
+  transition: flex-basis 0.5s ease;
 }
 
 .sidebar {
-  background-color: #1E1E1E;
+  background-color: #1e1e1e;
   height: 100vh;
   position: sticky;
   top: 0;
@@ -222,6 +217,12 @@ body {
 
 .sidebar-item:hover {
   background-color: rgb(245, 245, 245, 0.1);
+}
+
+.sidebar-item > svg {
+  min-width: 24px;
+  height: auto;
+  overflow: hidden;
 }
 
 main {
